# icicl

./: .gitignore  ADAPTIVE_MEMORY_LAW.md  README.md  analysis.py  analyze_embedding_dimension.ipynb  ccm.py  estimate_transfer_operator.ipynb  generating partition.ipynb  main.py  markov.py  measure_embedding_dimension.ipynb  models.py  operators.py  pyproject.toml  sweep_probabilities.py  talk_notes.md  tiny_lm.pt  tiny_lm2.pt  train_models.py  train_single_model.ipynb  transition_kgram.py  transitions.py
data/: lorenz96_gp_log.npz  losses.npz  tiny_lm.pt  traj_test.pkl  traj_test_out.pkl  traj_train.pkl
icicl/: adaptive_memory_law.py  analysis.py  clustering.py  markov.py  models.py  operators.py  sweep_probabilities.py  train_models.py  train_scaling_laws.py  train_scaling_laws.py~
private_archive/: dropout_model.py  good_model.py  multihead.py  onehot.py  sinusoidal_position_model.py
private_cache/: archive.py
