[project]
name = "icicl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "degas",
    "dysts>=0.95",
    "igraph>=1.0.0",
    "ipykernel>=6.30.1",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "leidenalg>=0.11.0",
    "line-profiler>=5.0.0",
    "matplotlib>=3.10.6",
    "memory-profiler>=0.61.0",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pip>=26.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
degas = { git = "https://github.com/williamgilpin/degas" }
dysts = { git = "https://github.com/GilpinLab/dysts" }
